--- a/tasks/precheck.yml
+++ b/tasks/precheck.yml
@@ -3,3 +3,11 @@
   fail:
     msg: "System {{ ansible_distribution }} is not support by this role"
   when: ansible_distribution not in supported_systems
+
+- name: Create files directory
+  delegate_to: localhost
+  run_once: true
+  file:
+    path: files
+    state: directory
+    mode: 0755
