--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -20,9 +20,16 @@ platforms:
       - "/sys/fs/cgroup:/sys/fs/cgroup:ro,z"
     command: /sbin/init
 
-  - name: ubuntu
-    image: docker.io/jrei/systemd-ubuntu:latest
-    #    image: docker.io/pycontribs/ubuntu:latest
+  - name: ubuntu18
+    image: docker.io/jrei/systemd-ubuntu:18.04
+    pre_build_image: true
+    privileged: true
+    volumes:
+      - "/sys/fs/cgroup:/sys/fs/cgroup:ro,z"
+    command: /sbin/init
+
+  - name: ubuntu20
+    image: docker.io/jrei/systemd-ubuntu:20.04
     pre_build_image: true
     privileged: true
     volumes:
@@ -31,6 +38,13 @@ platforms:
 
 provisioner:
   name: ansible
+  inventory:
+    group_vars:
+      all:
+        elk_stack_version: "7.14.1"
+        elasticsearch_version: "{{ elk_stack_version }}"
+        es_java_memory_gb: 1
+
 
 verifier:
   name: ansible
