--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -17,6 +17,6 @@
       copy:
         dest: /etc/elasticsearch/jvm.options.d/local.options
         content: |
-          -Xms4g
-          -Xmx4g
+          -Xms{{ es_java_memory_gb }}g
+          -Xmx{{ es_java_memory_gb }}g
         mode: 0644
