--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -5,6 +5,24 @@
   hosts: all
   gather_facts: false
   tasks:
-  - name: Example assertion
-    assert:
-      that: true
+    - name: Wait for Elasticsearch port is up
+      wait_for:
+        host: 127.0.0.1
+        port: 9200
+
+    - name: Get Elasticsearch health status
+      uri:
+        url: "http://127.0.0.1:9200/_cluster/health"
+      register: es_status
+
+    - name: Get Elasticsearch version
+      uri:
+        url: "http://127.0.0.1:9200"
+      register: es_version
+
+    - name: Check if Elasticsearch is healthy and proper version
+      assert:
+        that:
+          - es_status.json.status == "green"
+          - es_version.json.version.number == elasticsearch_version
+        quiet: true
